deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: s2iserver
  namespace: kube-devops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: s2i.kubesphere.com
    http:
      paths:
      - path: /
        backend:
          serviceName: s2iserver
          servicePort: 8001
